styles.css
* {
  margin: 0;
}

.navbar {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow: hidden;
  background-color: #3c3a39;
  position: relative;
  width: 375px;
  height: 92px;
  top: 0;
}

.navbar-links {
  display: none;
}

.nav-icon {
  display: none;
}

.navbar ul {
  color: white;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  display: flex;
  width: 100%;
  align-items: center;
}

.navbar li {
  list-style-type: none;
  padding: 1rem;
  color: white;
}

.navbar a {
  flex: 1;
}

.navbar-logo {
  flex: 1;
  font-size: 1.5rem;
  user-select: none;
}

.navbar-toggle {
  display: flex;
  margin-right: 12px;
}

.container-fluid {
  background-image: url('./images/illustration-header-mobile.png');
  background-position: right 0 bottom -43px;
  background-repeat: no-repeat;
  background-size: 135px;
  color: #fff;
  padding: 0;
  background-color: #1c1a19;
  align-items: flex-start;
  gap: 12px;
  position: absolute;
  width: 375px;
  height: 590px;
  left: 0;
  top: 92px;
}

.element {
  display: flex;
  color: white;
  list-style: none;
  gap: 1.5rem;
  position: absolute;
  padding-top: 1.2rem;
}

.home {
  color: white;
  display: flex;
  flex: column;
  justify-content: center;
}

.heading-home {
  color: #ff6b00;
  margin-top: 1.2rem;
  margin-top: 120px;
  margin-left: 24px;
  margin-right: 24px;
  font-style: normal;
  font-weight: 400;
  font-size: 56px;
  line-height: 64px;
  letter-spacing: 0.37px;
}

.card-text {
  position: relative;
  margin-top: 32px;
  width: 327px;
  height: 123px;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #fff;
  flex: none;
  order: 2;
  flex-grow: 0;
  margin-left: 24px;
  margin-right: 24px;
}

.card-title {
  color: white;
  width: 327px;
  height: 27px;
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  line-height: 32px;
  display: flex;
  align-items: center;
  margin-left: 24px;
  margin-right: 24px;
  margin-top: 32px;
}

.work-heading {
  margin-top: 940px;
  margin-left: 24px;
  margin-right: 24px;
  width: 327px;
  height: 83px;
  font-style: normal;
  font-weight: 400;
  font-size: 40px;
  line-height: 52px;
  display: flex;
  align-items: center;
  color: #1c1a19;
}

.work-detail {
  margin-top: -124px;
}

.img-fluid {
  display: block;
  width: 327px;
  height: 237px;
  margin-left: 24px;
  margin-right: 24px;
  column-gap: 80px;
  margin-top: -14px;
  margin-bottom: -44px;
}

.img-fluid2 {
  margin-left: 190px;
  margin-right: 24px;
  column-gap: 80px;
  margin-top: 4px;
  position: static;
  color: black;
}

h1::after {
  width: 327px;
  height: 0;
  border: 1px solid #212121;
  position: absolute;
  display: block;
}

.heading {
  margin-top: 84px;
  margin-left: 16px;
  width: 295px;
  height: 81px;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
  color: #fff;
}

.work-card-text-1 {
  margin-top: 12px;
  margin-left: 24px;
  margin-right: 24px;
  width: 327px;
  height: 147px;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #091e42;
}

.container-portfolio {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  margin-left: 14px;
  margin-top: 120px;
}

.skills ul {
  display: flex;
  list-style: none;
  margin-left: 20px;
  margin-right: 24px;
  margin-top: 84px;
  padding-top: 10%;
}

.badge {
  flex-direction: row;
  align-items: center;
  padding: 10px 12px;
  width: 49px;
  height: 40px;
  background: #fff;
  border: 1px solid #8993a4;
  padding-left: 5%;
  margin-left: -14px;
  margin-bottom: 22px;
  margin-top: -26px;
  padding-inline-start: 0;
}

.badge-1 {
  flex-direction: row;
  align-items: center;
  padding: 10px 12px;
  list-style: none;
  width: 56px;
  height: 40px;
  margin-left: 16px;
  background: rgba(255, 255, 255, 0.24);
}

.card-text-portfolio {
  width: 295px;
  height: 87px;
  line-height: 24px;
  color: #fff;
  margin-top: 8px;
  margin-left: 16px;
  overflow-x: hidden;
}

.work-heading-2 {
  width: 327px;
  height: 36px;
  padding-left: 10px;
  max-width: 60%;
  margin-bottom: 14px;
  margin-top: 64px;
  margin-left: 14px;
}

.work-card-text {
  margin-left: 20px;
  margin-right: 24px;
  font-size: 20px;
  line-height: 28px;
  margin-top: 44px;
  padding-bottom: 15%;
}

.see-project {
  position: absolute;
  width: 327px;
  height: 48px;
  background: #ff6b00;
  color: #fff;
  text-align: center;
  margin-top: 22px;
}

.see-projects {
  display: block;
  position: absolute;
  width: 327px;
  height: 48px;
  background: #ff6b00;
  color: #fff;
  text-align: center;
  margin-top: 22px;
}

.see-project-1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  gap: 10px;
  width: 124px;
  height: 20px;
  background: #ff6b00;
  margin-left: 20px;
  margin-top: 8px;
}

.see-project-1a {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  gap: 10px;
  width: 124px;
  height: 20px;
  background: #ff6b00;
  margin-left: 20px;
  margin-top: 8px;
}

.card-1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 327px;
  height: 386px;
  margin-left: 14px;
  margin-right: 24px;
  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url('./images/group2.png');
}

.card-2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 327px;
  height: 386px;
  margin-left: 14px;
  margin-right: 24px;
  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url('./images/group2.png');
}

.card-3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 327px;
  height: 386px;
  margin-left: 14px;
  margin-right: 24px;
  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url('./images/group2.png');
}
/* ... */

